<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="action_dialog">Dialog</string>
    <string name="action_call">Call</string>
    <string name="action_add">Add Video</string>
    <string name="action_toggle_theme">Toggle Theme</string>
    <string name="android_tutor">Android Tutor</string>
    <string name="hwang_seong_hee">HWANG SEONG HEE</string>
    <string name="settings">Settings</string>
    <string name="pick_image">Pick Image</string>
    <string name="detail">Detail</string>
    <string name="music">Music</string>
    <string name="youtube">YOUTUBE</string>
    <string name="live">Live</string>
    <string name="mix">Mix</string>
    <string name="nature">Nature</string>
    <string name="title_home">Home</string>
    <string name="title_recommend">AI Recommend</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_favorite">My Favorite</string>
    <string name="insert">추가</string>
    <string name="delete">삭제</string>
</resources>